# rustmail

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  audit.toml  distribution.md  flake.nix  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
crates/rustmail-api/: Cargo.toml
crates/rustmail-api/src/: handlers.rs  lib.rs  state.rs  static_files.rs  ws.rs
crates/rustmail-api/tests/: api.rs
crates/rustmail-server/: Cargo.toml
crates/rustmail-server/src/: main.rs
crates/rustmail-server/tests/: integration.rs
crates/rustmail-server/tests/fixtures/: starttls-cert.pem  starttls-key.pem
crates/rustmail-smtp/: Cargo.toml
crates/rustmail-smtp/src/: lib.rs  message.rs  server.rs  session.rs
crates/rustmail-storage/: Cargo.toml
crates/rustmail-storage/src/: error.rs  lib.rs  models.rs  repo.rs  schema.rs
crates/rustmail-tui/: Cargo.toml
crates/rustmail-tui/src/: api.rs  app.rs  event.rs  lib.rs  theme.rs
crates/rustmail-tui/src/ui/: help.rs  list.rs  mod.rs  popups.rs  preview.rs  util.rs
docker/: .dockerignore  Dockerfile  Dockerfile.ci  README.md  docker-compose.yml
docs/: api.yaml  docker.md  index.md  package-lock.json  package.json  postcss.config.mjs  production-readiness.md
docs/.vitepress/: config.ts  spec.ts
docs/.vitepress/theme/: custom.css  index.ts
docs/api/: [operationId].md  [operationId].paths.ts  index.md
docs/ci-integration/: cli-assert.md  github-action.md  rest-assertions.md
docs/configuration/: cli-flags.md  toml-config.md
docs/features/: email-auth.md  export.md  html-preview.md  keyboard-shortcuts.md  release.md  tui.md  webhooks.md  websocket.md
docs/getting-started/: architecture.md  docker.md  installation.md  introduction.md  quick-start.md
docs/integrations/: neovim.md
docs/public/: CNAME
scripts/: send-test-email.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: ConfirmDialog.tsx  FilterBar.tsx  Header.tsx  Inbox.tsx  MessageDetail.tsx  Modal.tsx  Settings.tsx
ui/src/lib/: api.ts  format.ts  types.ts
ui/src/stores/: messages.ts  rusted.ts  settings.ts  theme.ts
