[package]
name = "rustmail-storage"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "SQLite storage layer with FTS5 full-text search for the RustMail mail catcher"
keywords = ["smtp", "email", "sqlite", "storage"]
categories = ["development-tools", "database"]

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
mail-parser = { workspace = true }
time = { workspace = true }
