[package]
name = "rustmail-tui"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Interactive TUI for RustMail SMTP mail catcher"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
html2text = "0.14"
